# outlook-mcp

./: .augment-guidelines  .pre-commit-config.yaml  DEVELOPMENT.md  pyproject.toml  update_links.sh
.cursor/rules/: architecture-understanding.mdc  ci-cd.mdc  debug.mdc  directory-structure.mdc  error-documentation.mdc  implement.mdc  lessons-learned.mdc  master-rules.mdc  memory.mdc  plan.mdc  rules.mdc  security.mdc  testing.mdc
.cursor/rules/docs/: testing_standards_guide.md
.cursor/templates/: DEVELOPMENT.md  README.md  TEMPLATE_SYSTEM.md  conftest.py  github_workflows_lint.yml  github_workflows_test.yml  gitignore  init.py  main.py  pre-commit-config.yaml  project_kickoff_prompt.md  project_kickoff_prompt_flexible.md  pyproject.toml  test_main.py
.github/workflows/: lint.yml  test.yml
.roo/rules-architect/: architecture-understanding.mdc
docs/: architecture.md  error-documentation.md  lessons-learned.md  product_requirement_docs.md  technical.md
python-mcp/: README.md  config.py  requirements.txt  server.py
python-mcp/auth/: __init__.py  token_manager.py  tools.py
python-mcp/email/: __init__.py  folder_utils.py  list.py  read.py  search.py  send.py
python-mcp/folder/: __init__.py  create.py  list.py  move.py
python-mcp/rules/: __init__.py  create.py  list.py
python-mcp/utils/: __init__.py  graph_api.py  mock_data.py  odata_helpers.py
tasks/: active_context.md  tasks_plan.md
